--- a/practicum/COVID19/COVID-19.ipynb
+++ b/practicum/COVID19/COVID-19.ipynb
@@ -69,7 +69,7 @@
       "metadata": {
         "id": "GeGGt--KmOFl",
         "colab_type": "code",
-        "outputId": "60ca458f-3c57-4ad2-e288-4a1e7005a233",
+        "outputId": "8f8f5a64-6be8-46b0-9d95-57c9adb972fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -80,7 +80,7 @@
         "data_covid19.shape\n",
         "###End code here"
       ],
-      "execution_count": 25,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -92,7 +92,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 2
         }
       ]
     },
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "CQcEo-gVmOFv",
         "colab_type": "code",
-        "outputId": "f6c14efd-f758-40dc-8b4f-b65254980729",
+        "outputId": "b434e6c4-a6ea-46bd-8af5-49fa4161c6ca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 693
@@ -122,7 +122,7 @@
         "data_covid19.head(20)\n",
         "###End code here"
       ],
-      "execution_count": 26,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +466,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 3
         }
       ]
     },
@@ -556,7 +556,7 @@
       "metadata": {
         "id": "AqIdut0RmOGA",
         "colab_type": "code",
-        "outputId": "cabec296-f86e-4d03-e614-52820fcbb733",
+        "outputId": "2395a9f2-388b-41aa-df62-47b7bc9fcca5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 386
@@ -567,7 +567,7 @@
         "data_covid19[data_covid19[\"Key\"]==\"BE\"].tail(10)\n",
         "###End code here"
       ],
-      "execution_count": 28,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -771,7 +771,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 5
         }
       ]
     },
@@ -790,7 +790,7 @@
       "metadata": {
         "id": "VwXftvsRmOGN",
         "colab_type": "code",
-        "outputId": "ac4388a3-3456-46a6-bc53-13a8a8eff5b9",
+        "outputId": "bf8bb52c-5fc6-4e58-cacf-4a055e79a098",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 173
@@ -801,7 +801,7 @@
         "data_covid19[data_covid19[\"Key\"]==\"BE\"][\"Confirmed\"].describe()\n",
         "###End code here"
       ],
-      "execution_count": 29,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -821,7 +821,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 6
         }
       ]
     },
@@ -844,7 +844,7 @@
       "metadata": {
         "id": "FP_iA6VSmOGT",
         "colab_type": "code",
-        "outputId": "b123d930-7203-4343-c111-92d1bc602bf5",
+        "outputId": "9938fd28-8c1a-4978-eace-603b90f0b12c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 260
@@ -859,7 +859,7 @@
         "total_confirmed = data_covid19.groupby(A)[B].sum()\n",
         "print(total_confirmed)"
       ],
-      "execution_count": 30,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,7 +898,7 @@
       "metadata": {
         "id": "J5iBX_ltmOGZ",
         "colab_type": "code",
-        "outputId": "24b8106c-2443-4bd5-ee81-15e1dd32b1ed",
+        "outputId": "78cb2ef3-3aef-436b-ae05-e4e6c9dba946",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -908,7 +908,7 @@
         "total_confirmed = total_confirmed.reset_index(name = \"Confirmed\")\n",
         "print(total_confirmed)"
       ],
-      "execution_count": 31,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
       "metadata": {
         "id": "a7eCUUTemOGg",
         "colab_type": "code",
-        "outputId": "d31b81d1-6790-496c-a1d9-c197e0776b58",
+        "outputId": "2ad10e10-6b68-4373-f5f1-0176ca04a35b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
@@ -959,7 +959,7 @@
         "\n",
         "print(total_confirmed)"
       ],
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -999,10 +999,10 @@
       "metadata": {
         "id": "S3uiDpJImOGn",
         "colab_type": "code",
-        "outputId": "4588d576-6c2c-4dfb-b07c-05c66d791210",
+        "outputId": "aca8026d-ccbd-4e29-9997-fd397a133f2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 513
+          "height": 568
         }
       },
       "source": [
@@ -1022,8 +1022,16 @@
         "plt.xlabel(\"Country\")\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": 10,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "display_data",
           "data": {
@@ -1076,7 +1084,7 @@
       "metadata": {
         "id": "JAvb7EXwmOGz",
         "colab_type": "code",
-        "outputId": "b194b86b-b46a-44da-fe0e-26623d647dd2",
+        "outputId": "65fcb668-c560-4feb-fbc5-dab4245cb60c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
@@ -1091,7 +1099,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 35,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1147,7 +1155,7 @@
       "metadata": {
         "id": "B50ORqNImOHD",
         "colab_type": "code",
-        "outputId": "0959161f-d8d6-4a02-eb15-8ed29dcbbaee",
+        "outputId": "7aabe9bb-a85f-46a4-eb35-c5d76c0c1eb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 498
@@ -1162,7 +1170,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
